[package]
name = "danmaku"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "sync"] }
unicode-segmentation = "1.11"

[profile.release]
opt-level = "s"
lto = true
strip = true
